apache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  namespace: cloudengineers
spec:
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: apache
        image: delprodregistry.azurecr.io/httpd:V1
        imagePullPolicy: Always
        resources:
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: mydockerimagepullsec
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: apache
  namespace: cloudengineers
spec:
  selector:
    app: apache
  ports:
  - port: 80
    targetPort: 80
